--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"flowbite": "^3.1.2",
+		"flowbite-svelte": "^0.47.4",
 		"svelte": "^5.0.0",
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.48.1",
 		"@tailwindcss/vite": "^4.0.3",
 		"simple-datatables": "^9.2.2",
 		"tailwindcss": "^4.0.3"
