--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.48.1",
 		"@tailwindcss/vite": "^4.0.3",
+		"bcryptjs": "^2.4.3",
+		"flowbite-svelte-icons": "^2.0.2",
 		"simple-datatables": "^9.2.2",
 		"tailwindcss": "^4.0.3"
 	}
