--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"bcryptjs": "^2.4.3",
 		"flowbite-svelte-icons": "^2.0.2",
 		"simple-datatables": "^9.2.2",
-		"tailwindcss": "^4.0.3"
+		"tailwindcss": "^4.0.3",
+		"uuid": "^11.0.5"
 	}
 }
