--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"flowbite-svelte-icons": "^2.0.2",
 		"simple-datatables": "^9.2.2",
 		"tailwindcss": "^4.0.3",
-		"uuid": "^11.0.5"
+		"uuid": "^11.0.5",
+		"vercel": "^41.4.0"
 	}
 }
