--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.19.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"autoprefixer": "^10.4.21",
 		"flowbite": "^3.1.2",
 		"flowbite-svelte": "^0.47.4",
+		"postcss": "^8.5.3",
 		"svelte": "^5.0.0",
+		"tailwindcss": "^4.0.14",
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
@@ -24,7 +27,6 @@
 		"bcryptjs": "^2.4.3",
 		"flowbite-svelte-icons": "^2.0.2",
 		"simple-datatables": "^9.2.2",
-		"tailwindcss": "^4.0.3",
 		"uuid": "^11.0.5",
 		"vercel": "^41.4.0"
 	}
