--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.19.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tailwindcss/postcss": "^4.0.14",
 		"autoprefixer": "^10.4.21",
+		"clsx": "^2.1.1",
 		"flowbite": "^3.1.2",
 		"flowbite-svelte": "^0.47.4",
 		"postcss": "^8.5.3",
 		"svelte": "^5.0.0",
+		"tailwind-merge": "^3.0.2",
+		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.0.14",
 		"vite": "^6.0.0"
 	},
